// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LinkList /> renders LinkList correctly when its open 1`] = `
<div
  class="sc-bdVaJa links links__list eAapZr"
>
  <div
    class="links__list__item--selected sc-bwzfXH links__list__item dpfFYJ"
  >
    USA (English)
  </div>
  <div
    class="sc-bwzfXH links__list__item dpfFYJ"
  >
    Canada (English)
  </div>
  <div
    class="sc-bwzfXH links__list__item dpfFYJ"
  >
    Canada (Français)
  </div>
</div>
`;

exports[`<LinkList /> renders LinkList correctly with list items as links 1`] = `
<div
  class="sc-bdVaJa links links__list eAapZr"
>
  <a
    class="sc-bxivhb links__list__item drJGEa"
    href="/"
  >
    USA (English)
  </a>
  <a
    class="sc-bxivhb links__list__item drJGEa"
    href="/"
  >
    Canada (English)
  </a>
  <a
    class="sc-bxivhb links__list__item drJGEa"
    href="/"
  >
    Canada (Français)
  </a>
</div>
`;
